Randomize Jetty port to avoid conflicts